<resources>
    <string name="app_name">Criminal Intent</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_not_solved_label">Not Solved</string>
    <string name="crime_serious_label">This case is serious</string>
    <string name="crime_not_serious_label">This case is not serious</string>


    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="contact_police_button_description">Contact Police</string>

    <string name="date_picker_title">Date of crime:</string>
    <string name="at_string_between_time_and_date">"@"</string>
    <string name="time_picker_title">Time of crime:</string>

    <string name="new_crime">New Crime</string>
    <string name="add_normal_crime">Add Normal Crime</string>
    <string name="add_serious_crime">Add Serious Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
The crime was discovered on %2$s. %3$s, and %4$s
</string>
    <string name="toast_delete_crime">The Crime has been deleted</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect">Call suspect</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
</resources>